--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Challenge 2</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="update">
+    <div class="update" id="signup-form-page">
         <div class="stay">
             <h3>Stay updated!</h3>
             <h4>Join 60,000+ product managers receiving monthly <br> updates on:</h4>
@@ -17,15 +17,26 @@
                 <p><img src="images/icon-list.svg" alt="">Measuring to ensure updates are a success</p>
                 <p><img src="images/icon-list.svg" alt="">And much more!</p>
             </div>
-            <form action="">
+            <form>
                 <p>Email address</p>
-                <input type="text" placeholder="email@company.com">
-                <button><a href="">Subscribe to monthly newsletter</a></button>
+                <input type="email" id="email" placeholder="email@company.com" required >
+                <button type="submit" id="signup-button"><a href="">Subscribe to monthly newsletter</a></button>
             </form>
         </div>
         <div class="icon">
             <img src="images/illustration-sign-up-desktop.svg" alt="">
         </div>
     </div>
+
+    <!-- SUCCESS MESSAGE -->
+    <div class="message" id="success-message-page" style="display: none;">
+        <img src="images/icon-success.svg" alt="">
+        <h3>Thanks for subscribing!</h3>
+        <p>A confirmation email has been sent to <br> <span>tundexsmith624@gmail.com.</span> Please open it and click <br> the button inside to confirm your subscription</p>
+        <button type="submit" id="back-button"><a href="">Dismiss message</a></button>
+    </div>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
